--- a/EkipMobilya/Areas/Admin/Views/Slider/SliderIndex.cshtml
+++ b/EkipMobilya/Areas/Admin/Views/Slider/SliderIndex.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model IEnumerable<EkipMobilya.Models.Slaytlar>
 @{
     ViewBag.Title = "SliderIndex";
 }
@@ -35,18 +35,19 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for i in tumu %}
-                                <tr>
-                                    <td class="text-center">1</td>
-                                    <td>
-                                    <td><img width="150" height="150" src="/{{ i.slider_image }}"></td>                                  
-                                    <td>
-                                        /Admin/Slider/SliderIndex
-                                        <a href="/Admin/Slider/Delete/SlaytId" class="btn btn-info btn-outline btn-circle btn-lg m-r-5"><i class="ti-trash"></i></a>
-                                        <a href="/Admin/Slider/Edit/SlaytId" class="btn btn-info btn-outline btn-circle btn-lg m-r-5"><i class="ti-pencil-alt"></i></a>
-                                    </td>
-                                </tr>
-                                {% endfor %}
+                                @foreach (var item in Model)
+                                {
+                                    <tr>
+                                        <td class="text-center">@item.SlaytId</td>
+                                        <td>
+                                        <td><img width="150" height="150" src="@item.Slaytfoto"></td>
+                                        <td>                                          
+                                            @Html.ActionLink("Güncelle", "Edit", new { id = item.SlaytId }, new { @class = "btn btn-primary btn-sm" })
+                                            <a href="/Admin/Slider/Delete/SlaytId" class="btn btn-info btn-outline btn-circle btn-lg m-r-5"><i class="ti-trash"></i></a>                                            
+                                        </td>
+                                    </tr>
+                                }                            
+                              
                             </tbody>
                         </table>
                     </div>
