--- a/EkipMobilya/Areas/Admin/Views/DetayIcerik/DetayIcerikIndex.cshtml
+++ b/EkipMobilya/Areas/Admin/Views/DetayIcerik/DetayIcerikIndex.cshtml
@@ -1,19 +1,7 @@
-﻿
+﻿@model IEnumerable<EkipMobilya.Models.DetayIcerik>
 @{
     ViewBag.Title = "DetayIcerikIndex";
 }
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>{% extends 'panel/base.html' %}
-{% block content %}
 <div id="page-wrapper">
     <div class="container-fluid">
         <div class="row bg-title">
@@ -48,19 +36,20 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for i in tumu %}
+                                @foreach (var item in Model)
+                                {                                
                                 <tr>
-                                    <td class="text-center">1</td>
+                                    <td class="text-center">@item.DetayIcerikId</td>
                                     <td>
-                                        {{ i.content }}
+                                        @item.Icerik
                                     </td>
                                     <td>{{ i.urun_key.title }}</td>
                                     <td>
-                                        <a href="/Admin/DetayIcerik/Delete/{{ i.id }}" class="btn btn-info btn-outline btn-circle btn-lg m-r-5"><i class="ti-trash"></i></a>
-                                        <a href="/Admin/DetayIcerik/Edit/{{ i.id }}" class="btn btn-info btn-outline btn-circle btn-lg m-r-5"><i class="ti-pencil-alt"></i></a>
-                                    </td>
+                                        @Html.ActionLink("Güncelle", "Edit", new { id = item.DetayIcerikId }, new { @class = "btn btn-primary btn-sm" })
+                                        @Html.ActionLink("Sil", "Delete", new { id = item.DetayIcerikId }, new { @class = "btn btn-danger btn-sm" })
+                                   </td>
                                 </tr>
-                                {% endfor %}
+                                }
                             </tbody>
                         </table>
                     </div>
@@ -70,7 +59,7 @@
 
     </div>
     <!-- /.container-fluid -->
-    <footer class="footer text-center"> 2017 &copy; Ample Admin brought to you by themedesigner.in </footer>
+    <footer class="footer text-center"> 2019 &copy;Powered by Dogruyer Reklam Bilişim Organizasyon A.Ş </footer>
 </div>
-{% endblock %}
+
 
