--- a/EkipMobilya/Areas/Admin/Views/Footer/FooterIndex.cshtml
+++ b/EkipMobilya/Areas/Admin/Views/Footer/FooterIndex.cshtml
@@ -1,10 +1,8 @@
-﻿
+﻿@model IEnumerable<EkipMobilya.Models.Footer>
 @{
     ViewBag.Title = "FooterIndex";
 }
 
-{% extends 'panel/base.html' %}
-{% block content %}
 <div id="page-wrapper">
     <div class="container-fluid">
         <div class="row bg-title">
@@ -41,27 +39,28 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for i in tumu %}
+                                @foreach (var item in Model)
+                                {                               
                                 <tr>
                                     <td class="text-center">1</td>
                                     <td>
-                                        {{ i.slogan }}
+                                        @item.Slogan
                                     </td>
                                     <td>
-                                        {{ i.adres }}
+                                        @item.Adres
                                     </td>
                                     <td>
-                                        {{ i.telefon }}
+                                        @item.Telefon
                                     </td>
                                     <td>
-                                        {{ i.email }}
+                                        @item.Mail
                                     </td>
                                     <td>
-                                        <a href="/Admin/Footer/Delete/{{ i.id }}" class="btn btn-info btn-outline btn-circle btn-lg m-r-5"><i class="ti-trash"></i></a>
-                                        <a href="/Admin/Footer/Edit/{{ i.id }}" class="btn btn-info btn-outline btn-circle btn-lg m-r-5"><i class="ti-pencil-alt"></i></a>
+                                        @Html.ActionLink("Güncelle", "Edit", new { id = item.FooterId }, new { @class = "btn btn-primary btn-sm" })
+                                        @Html.ActionLink("Sil", "Delete", new { id = item.FooterId }, new { @class = "btn btn-danger btn-sm" })
                                     </td>
                                 </tr>
-                                {% endfor %}
+                                }
                             </tbody>
                         </table>
                     </div>
@@ -70,6 +69,5 @@
         </div>
     </div>
     <!-- /.container-fluid -->
-    <footer class="footer text-center"> 2017 &copy; Ample Admin brought to you by themedesigner.in </footer>
+    <footer class="footer text-center"> 2019 &copy;Powered by Dogruyer Reklam Bilişim Organizasyon A.Ş </footer>
 </div>
-{% endblock %}
