--- a/EkipMobilya/Areas/Admin/Views/Galeri/GaleriIndex.cshtml
+++ b/EkipMobilya/Areas/Admin/Views/Galeri/GaleriIndex.cshtml
@@ -1,10 +1,8 @@
-﻿
+﻿@model IEnumerable<EkipMobilya.Models.Galeri>
 @{
     ViewBag.Title = "GaleriIndex";
 }
 
-{% extends 'panel/base.html' %}
-{% block content %}
 <div id="page-wrapper">
     <div class="container-fluid">
         <div class="row bg-title">
@@ -41,26 +39,27 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for i in tumu %}
+                                @foreach (var item in Model)
+                                {                                
                                 <tr>
                                     <td class="text-center">1</td>
                                     <td>
-                                        {{ i.title }}
+                                        @item.Baslik
                                     </td>
                                     <td>
-                                        {{ i.content }}
+                                        @item.Icerik
                                     </td>
-                                    <td><img width="150px;" height="150px;" src="/{{ i.urun_image }}"></td>
+                                    <td><img width="150" height="150" src="@item.Resim"></td>
                                     <td>
-                                        {{ i.kategori_id.title }}
+                                        @item.anaKategorilers.Baslik
                                     </td>
                                     <td></td>
                                     <td>
-                                        <a href="/Admin/Galeri/Delete/{{ i.id }}" class="btn btn-info btn-outline btn-circle btn-lg m-r-5"><i class="ti-trash"></i></a>
-                                        <a href="/Admin/Galeri/Edit/{{ i.id }}" class="btn btn-info btn-outline btn-circle btn-lg m-r-5"><i class="ti-pencil-alt"></i></a>
+                                        @Html.ActionLink("Güncelle", "Edit", new { id = item.GaleriId }, new { @class = "btn btn-primary btn-sm" })
+                                        @Html.ActionLink("Sil", "Delete", new { id = item.GaleriId }, new { @class = "btn btn-danger btn-sm" })
                                     </td>
                                 </tr>
-                                {% endfor %}
+                                }
                             </tbody>
                         </table>
                     </div>
@@ -69,6 +68,5 @@
         </div>
     </div>
     <!-- /.container-fluid -->
-    <footer class="footer text-center"> 2017 &copy; Ample Admin brought to you by themedesigner.in </footer>
+    <footer class="footer text-center"> 2019 &copy;Powered by Dogruyer Reklam Bilişim Organizasyon A.Ş </footer>
 </div>
-{% endblock %}
