--- a/EkipMobilya/Areas/Admin/Views/Koleksiyon/KoleksiyonIndex.cshtml
+++ b/EkipMobilya/Areas/Admin/Views/Koleksiyon/KoleksiyonIndex.cshtml
@@ -1,10 +1,8 @@
-﻿
+﻿@model IEnumerable<EkipMobilya.Models.Koleksiyon>
 @{
     ViewBag.Title = "KoleksiyonIndex";
 }
 
-{% extends 'panel/base.html' %}
-{% block content %}
 <div id="page-wrapper">
     <div class="container-fluid">
         <div class="row bg-title">
@@ -40,24 +38,24 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for i in tumu %}
+                                @foreach (var item in Model)
+                                {                               
                                 <tr>
-                                    <td class="text-center">1</td>
+                                    <td class="text-center">@item.KoleksiyonId</td>
                                     <td>
-                                        {{ i.title }}
+                                        @item.KoleksiyonAdi
                                     </td>
                                     <td>
-                                        {{ i.content }}
+                                        @item.KoleksiyonIcerik
                                     </td>
-                                    <td><img width="150px;" height="150px;" src="/{{ i.koleksiyon_image }}"></td>
-                                    <td>{{ i.koleksiyonkategori.title }}</td>
+                                    <td><img width="150" height="150" src="@item.KoleksiyonResim"></td>
+                                    <td>@item.koleksiyonBaslik.KoleksiyonBaslikIsim</td>
                                     <td>
-
-                                        <a href="/Admin/Koleksiyon/Delete/{{ i.id }}" class="btn btn-info btn-outline btn-circle btn-lg m-r-5"><i class="ti-trash"></i></a>
-                                        <a href="/Admin/Koleksiyon/Edit/{{ i.id }}" class="btn btn-info btn-outline btn-circle btn-lg m-r-5"><i class="ti-pencil-alt"></i></a>
+                                        @Html.ActionLink("Güncelle", "Edit", new { id = item.KoleksiyonId }, new { @class = "btn btn-primary btn-sm" })
+                                        @Html.ActionLink("Sil", "Delete", new { id = item.KoleksiyonId }, new { @class = "btn btn-danger btn-sm" })
                                     </td>
                                 </tr>
-                                {% endfor %}
+                                }
                             </tbody>
                         </table>
                     </div>
@@ -66,6 +64,5 @@
         </div>
     </div>
     <!-- /.container-fluid -->
-    <footer class="footer text-center"> 2017 &copy; Ample Admin brought to you by themedesigner.in </footer>
+    <footer class="footer text-center"> 2019 &copy;Powered by Dogruyer Reklam Bilişim Organizasyon A.Ş </footer>
 </div>
-{% endblock %}
