--- a/EkipMobilya/Areas/Admin/Views/Renkler/RenklerIndex.cshtml
+++ b/EkipMobilya/Areas/Admin/Views/Renkler/RenklerIndex.cshtml
@@ -1,10 +1,8 @@
-﻿
+﻿@model IEnumerable<EkipMobilya.Models.Renkler>
 @{
     ViewBag.Title = "RenklerIndex";
 }
 
-{% extends 'panel/base.html' %}
-{% block content %}
 <div id="page-wrapper">
     <div class="container-fluid">
         <div class="row bg-title">
@@ -36,19 +34,20 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for i in tumu %}
+                                @foreach (var item in Model)
+                                {                                
                                 <tr>
-                                    <td class="text-center">1</td>
+                                    <td class="text-center">@item.RenklerId</td>
                                     <td>
-                                        {{ i.title }}
+                                        @item.RenkAdi
                                     </td>
-                                    <td><img width="150" height="150" src="/{{ i.renk_image }}"></td>
+                                    <td><img width="150" height="150" src="@item.RenkResim"></td>
                                     <td>
-                                        <a href="/Admin/Renkler/Delete{{ i.id }}" class="btn btn-info btn-outline btn-circle btn-lg m-r-5"><i class="ti-trash"></i></a>
-                                        <a href="/Admin/Renkler/Edit/{{ i.id }}" class="btn btn-info btn-outline btn-circle btn-lg m-r-5"><i class="ti-pencil-alt"></i></a>
+                                        @Html.ActionLink("Güncelle", "Edit", new { id = item.RenklerId }, new { @class = "btn btn-primary btn-sm" })
+                                        @Html.ActionLink("Sil", "Delete", new { id = item.RenklerId }, new { @class = "btn btn-danger btn-sm" })
                                     </td>
                                 </tr>
-                                {% endfor %}
+                                }
                             </tbody>
                         </table>
                     </div>
@@ -57,6 +56,5 @@
         </div>
     </div>
     <!-- /.container-fluid -->
-    <footer class="footer text-center"> 2017 &copy; Ample Admin brought to you by themedesigner.in </footer>
+    <footer class="footer text-center"> 2019 &copy;Powered by Dogruyer Reklam Bilişim Organizasyon A.Ş </footer>
 </div>
-{% endblock %}
