--- a/EkipMobilya/Areas/Admin/Views/Koleksiyon/Create.cshtml
+++ b/EkipMobilya/Areas/Admin/Views/Koleksiyon/Create.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model EkipMobilya.Areas.Admin.Models.KoleksiyonView
 @{
     ViewBag.Title = "Create";
 }
@@ -30,20 +30,19 @@
                     <p class="text-muted m-b-30 font-13"> FORM ÖĞELERİ </p>
                     <div class="row">
                         <div class="col-sm-12 col-xs-12">
-                            <form method="POST" action="" class="form-signin" role="form" enctype="multipart/form-data">
-                                {% for field in form %}
+                            @using (Html.BeginForm("Create", "Koleksiyon", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                                {
                                 <input type="{{field.field.widget.input_type}}" name="{{field.html_name}}" placeholder="{{field.label}}" class="form-control" />
-                                <br><br>
-                                {% endfor %}
+                                <br><br>                               
                                 <select class="form-control" id="koleksiyonkategori" name="koleksiyonkategori">
                                     {% for k in tumkategoriler %}
                                     <option id="{{k.id}}" name="{{k.id}}" value="{{k.id}}"> {{ k.title }} </option>
                                     {% endfor %}
                                 </select>
                                 <br />
-                                {% csrf_token %}
+                               
                                 <button type="submit" class="btn btn-success waves-effect waves-light m-r-10">EKLE</button>
-                            </form>
+                            }
                         </div>
                     </div>
                 </div>
@@ -53,4 +52,3 @@
     <!-- /.container-fluid -->
     <footer class="footer text-center"> 2017 &copy; Ample Admin brought to you by themedesigner.in </footer>
 </div>
-{% endblock %}
