--- a/EkipMobilya/Areas/Admin/Views/KoleksiyonBaslik/Create.cshtml
+++ b/EkipMobilya/Areas/Admin/Views/KoleksiyonBaslik/Create.cshtml
@@ -1,10 +1,8 @@
-﻿
+﻿@model EkipMobilya.Models.KoleksiyonBaslik
 @{
     ViewBag.Title = "Create";
 }
 
-{% extends 'panel/base.html' %}
-{% block content %}
 <div id="page-wrapper">
     <div class="container-fluid">
         <div class="row bg-title">
@@ -30,14 +28,17 @@
                     <p class="text-muted m-b-30 font-13"> Bootstrap Elements </p>
                     <div class="row">
                         <div class="col-sm-12 col-xs-12">
-                            <form method="POST" action="" class="form-signin" role="form" enctype="multipart/form-data">
-                                {% for field in form %}
-                                <input type="{{field.field.widget.input_type}}" name="{{field.html_name}}" placeholder="{{field.label}}" class="form-control" />
+                            @using (Html.BeginForm("Create", "KoleksiyonBaslik", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                            {
+                                <h3 class="box-title">@Html.DisplayNameFor(model => model.KoleksiyonBaslikIsim)</h3>
+                                <label for="input-file-now-custom-1">@DateTime.Now</label>
+                                <br>
+                                @Html.EditorFor(i=>i.KoleksiyonBaslikIsim,new { @class = "form-control" })
                                 <br><br>
-                                {% endfor %}
-                                {% csrf_token %}
-                                <button type="submit" class="btn btn-success waves-effect waves-light m-r-10">Submit</button>
-                            </form>
+                                <input type="submit" value="Kaydet" class="btn btn-success waves-light m-r-10" />
+                                @Html.ActionLink("Listeye Dön", "KoleksiyonBaslikIndex", null, new { @class = "btn btn-primary waves-effect waves-light m-r-10" })
+
+                            }
                         </div>
                     </div>
                 </div>
@@ -47,4 +48,3 @@
     <!-- /.container-fluid -->
     <footer class="footer text-center"> 2017 &copy; Ample Admin brought to you by themedesigner.in </footer>
 </div>
-{% endblock %}
